[package]
name = "vald-agent-ngt-rs"
version = "0.1.0"
authors = ["Rintaro Okamura <rintaro.okamura@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3", default-features = false }
lazy_static = "1.4"
prometheus = { version = "0.9", features = ["process"] }
prost = "0.6"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "time"] }
tonic = "0.3.1"
warp = "0.2"
ngt = "0.2.1"
log = "0.4.11"
env_logger = "0.8.2"

[build-dependencies]
tonic-build = "0.3"

[[bin]]
name = "vald-agent-ngt-rs"
path = "src/main.rs"
